--- a/AN/index.html
+++ b/AN/index.html
@@ -1,13 +1,11 @@
-<!-- Angel Numbers Tracker v1.1B2 -->
+<!-- Angel Numbers Tracker v1.1B3 -->
 <!--
 Version Detail Notes
-App Version: v1.1B2
-Base: v1.1B1
+App Version: v1.1B3
+Base: v1.1B2
 
 Changes (requested):
-- Pull-to-refresh: "Release to refresh" threshold increased to 225px (and percent scaled to that).
-- Identify Home: Exit button is now smaller and sits beside Export (same row).
-- Day List modal: removed the X close button (bottom Close remains).
+- Angel Card area in View & Update now has a clear “card” border (matches app theme).
 -->
 <!doctype html>
 <html lang="en">
@@ -316,6 +314,23 @@ Changes (requested):
       background: rgba(235,245,255,.22);
       border-radius: 999px;
       border: 2px solid rgba(255,255,255,.04);
+    }
+
+    /* NEW: Angel Card "card" frame (for View & Update modal) */
+    .angelCardFrame{
+      margin-top: 6px;
+      border: 2px solid rgba(90,150,255,.40);
+      background: linear-gradient(180deg, rgba(255,255,255,.035), rgba(255,255,255,.02));
+      border-radius: 20px;
+      box-shadow: 0 14px 34px rgba(0,0,0,.26);
+      padding: 10px;
+    }
+    .angelCardFrame .metaScroll{
+      margin-top: 0;
+      border: 1px solid rgba(235,245,255,.10);
+      background: rgba(0,0,0,.10);
+      border-radius: 16px;
+      box-shadow: inset 0 0 0 1px rgba(255,255,255,.03);
     }
 
     .disclaimer{
@@ -847,7 +862,9 @@ Save creates a .txt file on your device.
       <div id="editPattern" class="field" style="display:flex; align-items:center; font-weight:900; color: rgba(235,245,255,.84);">—</div>
 
       <div class="label">Angel Card</div>
-      <div id="editAngelCard" class="metaScroll" style="max-height: 260px;">—</div>
+      <div class="angelCardFrame">
+        <div id="editAngelCard" class="metaScroll" style="max-height: 260px;">—</div>
+      </div>
 
       <div class="modalBtns">
         <button id="btnEditSave" class="btn primary">Save</button>
@@ -896,7 +913,7 @@ Save creates a .txt file on your device.
 (() => {
   "use strict";
 
-  const APP_VERSION = "v1.1B2";
+  const APP_VERSION = "v1.1B3";
   const STORAGE_KEY = "angel_numbers_records_v1";
   const DAY_MS = 24*60*60*1000;
 
@@ -2268,10 +2285,8 @@ self.addEventListener('fetch', (e)=>{ });`;
 
 <!--
 EOF Version Detail Notes
-App Version: v1.1B2
-Base: v1.1B1
+App Version: v1.1B3
+Base: v1.1B2
 Changes:
-- Pull-to-refresh threshold increased to 225px (Release to refresh).
-- Identify Home: Exit button smaller and placed beside Export.
-- Day List modal: removed X close button (bottom Close remains).
+- Angel Card area in View & Update now has a clear card-style border/frame.
 -->
